[package]
name = "cennznet"
version = "0.9.16"
authors = ["Centrality Developers <support@centrality.ai>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "cennznet"
path = "src/main.rs"

[dependencies]
error-chain = "0.12"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1.7"
exit-future = "0.1"
hex-literal = "0.1"
slog = "^2"
app_dirs = "1.2"
parity-codec = { version = "3.1" }
trie-root = { git = "https://github.com/paritytech/trie" }
sr-io = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
sr-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-cli = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-executor = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-service = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-transaction-pool = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-network = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-consensus-aura = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-keystore = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-client = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
substrate-consensus-common = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-finality-grandpa = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-basic-authorship = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-inherents = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-telemetry = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-grandpa = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
structopt = "0.2.13"
cennznet-runtime = { path = "runtime" }
cennznet-primitives = { path = "primitives" }

[build-dependencies]
vergen = "2"

[workspace]
members = [ "runtime", "primitives", "crml/*" ]
exclude = [ "runtime/wasm" ]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
