[package]
name = "cennznet-primitives"
version = "0.1.0"
authors = ["Centrality Developers <developers@centrality.ai>"]

[dependencies]
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
parity-codec = { version = "2.1", default-features = false }
parity-codec-derive = { version = "2.1", default-features = false }
substrate-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-std = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec-derive/std",
	"parity-codec/std",
	"substrate-primitives/std",
	"sr-std/std",
	"sr-primitives/std",
	"serde_derive",
	"serde/std",
]
