[package]
name = "cennznet-primitives"
version = "0.1.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
runtime-io = { package = "sr-io", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
parity-codec = { version = "3.1", default-features = false, features = ["derive"] }

primitives = { package = "substrate-primitives", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
rstd = { package = "sr-std", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
runtime_primitives = { package = "sr-primitives", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"primitives/std",
	"runtime-io/std",
	"rstd/std",
	"runtime_primitives/std",
	"serde_derive",
	"serde/std",
]
