[package]
name = "cennznet-runtime"
version = "0.1.0"
authors = ["Centrality Developers <developers@centrality.ai>"]

[dependencies]
rustc-hex = "1.0"
hex-literal = "0.1.0"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
parity-codec = "2.0"
parity-codec-derive = "2.0"
sr-std = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
sr-io = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-support = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-keyring = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-balances = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-consensus = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-contract = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-council = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-democracy = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-executive = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
sr-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-session = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-staking = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-system = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-timestamp = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-treasury = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-upgrade-key = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
srml-grandpa = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-client = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", optional = true }
sr-version = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
substrate-finality-grandpa-primitives =  { git = "ssh://git@bitbucket.org/centralitydev/substrate.git" }
cennznet-primitives = { path = "../primitives" }
cennznet-module-generic-asset = { path = "../modules/generic-asset" }
cennznet-module-sylo = { path = "../modules/sylo" }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"parity-codec-derive/std",
	"substrate-primitives/std",
	"sr-std/std",
	"srml-support/std",
	"srml-balances/std",
	"srml-consensus/std",
	"srml-contract/std",
	"srml-council/std",
	"srml-democracy/std",
	"srml-executive/std",
	"sr-primitives/std",
	"srml-session/std",
	"srml-staking/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-treasury/std",
	"srml-upgrade-key/std",
	"sr-version/std",
	"cennznet-primitives/std",
	"serde_derive",
	"serde/std",
	"safe-mix/std",
	"substrate-client/std",
	"substrate-finality-grandpa-primitives/std",
	"cennznet-module-sylo/std",
]
