[package]
name = "cennznet-runtime"
version = "0.1.0"
authors = ["Centrality Developers <developers@centrality.ai>"]

[dependencies]
integer-sqrt = { version = "0.1.2" }
safe-mix = { version = "1.0", default-features = false }
parity-codec-derive = { version = "2.1" }
parity-codec = { version = "3.0", default-features = false }
substrate-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
substrate-client = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-std = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-version = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-support = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-aura = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-balances = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-consensus = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-contract = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-council = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-democracy = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-executive = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-grandpa = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-session = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-staking = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-system = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-timestamp = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-treasury = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-sudo = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
substrate-consensus-aura-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
rustc-hex = { version = "1.0", optional = true }
hex-literal = { version = "0.1.0", optional = true }
serde = { version = "1.0", optional = true }
substrate-keyring = {git = "ssh://git@bitbucket.org/centralitydev/substrate.git", optional = true }
cennznet-primitives = { path = "../primitives", default-features = false }
cennznet-module-attestation = { path = "../modules/attestation", default-features = false }
cennznet-module-sylo = { path = "../modules/sylo", default-features = false }
srml-generic-asset = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"substrate-primitives/std",
	"sr-std/std",
	"sr-primitives/std",
	"srml-support/std",
	"srml-balances/std",
	"srml-consensus/std",
	"srml-contract/std",
	"srml-council/std",
	"srml-democracy/std",
	"srml-executive/std",
	"srml-grandpa/std",
	"srml-session/std",
	"srml-staking/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-treasury/std",
	"srml-sudo/std",
	"sr-version/std",
	"cennznet-primitives/std",
	"serde/std",
	"safe-mix/std",
	"substrate-client/std",
	"substrate-consensus-aura-primitives/std",
	"rustc-hex",
	"hex-literal",
	"serde",
	"substrate-keyring",
	"cennznet-module-attestation/std",
	"cennznet-module-sylo/std",
	"srml-generic-asset/std",
]
