[package]
name = "cennznet-runtime"
version = "0.1.0"
authors = ["Centrality Developers <developers@centrality.ai>"]
edition = "2018"

[dependencies]
integer-sqrt = { version = "0.1.2" }
safe-mix = { version = "1.0", default-features = false }
parity-codec-derive = { version = "3.0" }
parity-codec = { version = "3.0", default-features = false }
substrate-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
substrate-client = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
rstd = { package = "sr-std", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
runtime-primitives = { package = "sr-primitives", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
version = { package = "sr-version", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-support = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
aura = { package = "srml-aura", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
balances = { package = "srml-balances", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
consensus = { package = "srml-consensus", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
contract = { package= "srml-contract", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
council = { package = "srml-council", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
democracy = { package = "srml-democracy", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
executive = { package = "srml-executive", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
grandpa = { package = "srml-grandpa", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
indices = { package = "srml-indices", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
session = { package = "srml-session", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
staking = { package = "srml-staking", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
system = { package = "srml-system", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
timestamp = { package = "srml-timestamp", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
treasury = { package = "srml-treasury", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sudo = { package = "srml-sudo", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
consensus_aura = { package = "substrate-consensus-aura-primitives", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
rustc-hex = { version = "2.0", optional = true }
hex-literal = { version = "0.1.0", optional = true }
serde = { version = "1.0", optional = true }
substrate-keyring = {git = "ssh://git@bitbucket.org/centralitydev/substrate.git", optional = true }
cennznet-primitives = { path = "../primitives", default-features = false }
attestation = { package = "cennznet-module-attestation", path = "../modules/attestation", default-features = false }
doughnut = { package = "cennznet-module-doughnut", path = "../modules/doughnut", default-features = false }
sylo = { package = "cennznet-module-sylo", path = "../modules/sylo", default-features = false }
generic-asset = { package = "srml-generic-asset", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"substrate-primitives/std",
	"rstd/std",
	"runtime-primitives/std",
	"srml-support/std",
	"balances/std",
	"aura/std",
	"consensus/std",
	"contract/std",
	"council/std",
	"democracy/std",
	"executive/std",
	"grandpa/std",
	"indices/std",
	"session/std",
	"staking/std",
	"system/std",
	"timestamp/std",
	"treasury/std",
	"sudo/std",
	"version/std",
	"cennznet-primitives/std",
	"serde/std",
	"safe-mix/std",
	"substrate-client/std",
	"consensus_aura/std",
	"rustc-hex",
	"hex-literal",
	"serde",
	"substrate-keyring",
	"attestation/std",
	"doughnut/std",
	"sylo/std",
	"generic-asset/std",
]
