[package]
name = "crml-doughnut"
version = "0.1.0"
authors = ["Centrality Developers <developers@centrality.ai>"]
edition = "2018"

[dependencies]
parity-codec = { version = "3.1", default-features = false }
parity-codec-derive = { version = "3.1", default-features = false }
substrate-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-std = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-io = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-support = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-system = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"parity-codec-derive/std",
	"substrate-primitives/std",
	"sr-primitives/std",
	"sr-std/std",
	"sr-io/std",
	"srml-support/std",
	"srml-system/std",
]
