[package]
name = "cennznet-module-cennz-x"
version = "0.1.0"
authors = ["Centrality Developers <developers@centrality.ai>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false }
parity-codec = { version = "3.0", default-features = false }
parity-codec-derive = { version = "3.0", default-features = false }
generic-asset = { package="srml-generic-asset", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
substrate-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
rstd = { package="sr-std", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
runtime_io = { package="sr-io", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
runtime_primitives = { package="sr-primitives", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-support = { package="srml-support", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
system = { package="srml-system", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-timestamp = { package="srml-timestamp", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }

[dev-dependencies]
consensus = { package = "srml-consensus", git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"parity-codec-derive/std",
	"substrate-primitives/std",
	"runtime_primitives/std",
	"srml-support/std",
	"system/std",
	"srml-timestamp/std",
]
