[package]
name = "cennznet-module-sylo"
version = "0.1.0"
authors = []

[dependencies]
serde = { version = "1.0", default-features = false }
parity-codec = { version = "3.0", default-features = false }
parity-codec-derive = { version = "3.0", default-features = false }
substrate-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-std = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-io = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-support = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-system = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-balances = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"parity-codec-derive/std",
  "substrate-primitives/std",
	"sr-std/std",
	"sr-io/std",
	"sr-primitives/std",
	"srml-support/std",
	"srml-system/std",
  "srml-balances/std",
]
