[package]
name = "prml-attestation"
version = "0.1.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
parity-codec = { version = "3.1", default-features = false, features = ["derive"] }
substrate-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-primitives = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-std = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
sr-io = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-support = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }
srml-system = { git = "ssh://git@bitbucket.org/centralitydev/substrate.git", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"substrate-primitives/std",
	"sr-primitives/std",
	"sr-std/std",
	"sr-io/std",
	"srml-support/std",
	"srml-system/std",
]
