[package]
name = "cennznet-runtime"
version = "0.1.0"
authors = ["Centrality Developers <developers@centrality.ai>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
integer-sqrt = { git = "https://github.com/paritytech/integer-sqrt-rs.git" }
safe-mix = { version = "1.0", default-features = false}
parity-codec-derive = { version = "^2.1" }
parity-codec = { version = "^2.1", default-features = false }
substrate-primitives = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
substrate-client = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
sr-std = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
sr-io = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
srml-support = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
srml-balances = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
srml-consensus = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
srml-contract = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
srml-council = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
srml-democracy = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
srml-executive = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
sr-primitives = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
srml-session = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
srml-staking = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
srml-system = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
srml-timestamp = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
srml-treasury = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
srml-upgrade-key = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
sr-version = { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
substrate-finality-grandpa-primitives =  { git = "https://github.com/cennznet/substrate", branch = 'cennznet', default-features = false }
cennznet-primitives = { path = "../../primitives", default-features = false }

[features]
default = []
std = [
	"safe-mix/std",
	"parity-codec/std",
	"substrate-primitives/std",
	"substrate-client/std",
	"substrate-finality-grandpa-primitives/std",
	"sr-std/std",
	"srml-support/std",
	"srml-balances/std",
	"srml-consensus/std",
	"srml-contract/std",
	"srml-council/std",
	"srml-democracy/std",
	"srml-executive/std",
	"sr-primitives/std",
	"srml-session/std",
	"srml-staking/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-treasury/std",
	"srml-upgrade-key/std",
	"sr-version/std",
	"cennznet-primitives/std",
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
